# Vivid_Project

./: .gitignore  README.md  manage.py  pyproject.toml
bookings/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
bookings/migrations/: 0001_initial.py
bookings/templates/bookings/: booking_detail.html  booking_done.html  booking_status.html  calendar.html  form.html
core/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_sitesettings_address_sitesettings_copyright_text_and_more.py
core/static/core/css/: gallery.css  styles.css
core/static/core/js/: gallery.js  main.js
core/templates/core/: about.html  base.html  contacts.html  home.html  services.html
core/templates/core/includes/: _footer.html  _navbar.html
framed/: asgi.py  settings.py  urls.py  wsgi.py
portfolio/: admin.py  filters.py  models.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py
portfolio/static/portfolio/css/: portfolio.css
portfolio/static/portfolio/js/: portfolio.js
portfolio/templates/: album_detail.html
portfolio/templates/portfolio/: album_detail.html  gallery.html  media_fullscreen.html  shooting_type.html  video_list.html
reviews/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
reviews/migrations/: 0001_initial.py
reviews/templates/reviews/: create.html  list.html  moderate.html  thanks.html
reviews/templates/reviews/includes/: _review_card.html  _reviews_list.html
utils/: notifications.py
